// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab renders correctly 1`] = `
<DocumentFragment>
  .cache-1moiegq-StyledTab {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 12px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  color: #b2b6c3;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
}

.cache-1moiegq-StyledTab:hover,
.cache-1moiegq-StyledTab:active,
.cache-1moiegq-StyledTab:focus {
  color: #390171;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1moiegq-StyledTab:focus-visible {
  outline: auto;
}

.cache-1moiegq-StyledTab[aria-selected='true'] {
  color: #390171;
}

.cache-1moiegq-StyledTab[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.5;
}

.cache-1moiegq-StyledTab[aria-disabled='true']:hover,
.cache-1moiegq-StyledTab[aria-disabled='true']:focus {
  color: #b2b6c3;
}

<span
    aria-disabled="false"
    aria-selected="false"
    class="cache-1moiegq-StyledTab e4qdw5v0"
    role="tab"
    tabindex="-1"
  >
    Test tab
  </span>
</DocumentFragment>
`;

exports[`Tab renders correctly and trigger events 1`] = `
<DocumentFragment>
  .cache-1moiegq-StyledTab {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 12px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  color: #b2b6c3;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
}

.cache-1moiegq-StyledTab:hover,
.cache-1moiegq-StyledTab:active,
.cache-1moiegq-StyledTab:focus {
  color: #390171;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1moiegq-StyledTab:focus-visible {
  outline: auto;
}

.cache-1moiegq-StyledTab[aria-selected='true'] {
  color: #390171;
}

.cache-1moiegq-StyledTab[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.5;
}

.cache-1moiegq-StyledTab[aria-disabled='true']:hover,
.cache-1moiegq-StyledTab[aria-disabled='true']:focus {
  color: #b2b6c3;
}

<span
    aria-disabled="false"
    aria-label="test"
    aria-selected="false"
    class="cache-1moiegq-StyledTab e4qdw5v0"
    role="tab"
    tabindex="-1"
  >
    Test
  </span>
</DocumentFragment>
`;

exports[`Tab renders correctly when as component 1`] = `
<DocumentFragment>
  .cache-1moiegq-StyledTab {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 12px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  color: #b2b6c3;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
}

.cache-1moiegq-StyledTab:hover,
.cache-1moiegq-StyledTab:active,
.cache-1moiegq-StyledTab:focus {
  color: #390171;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1moiegq-StyledTab:focus-visible {
  outline: auto;
}

.cache-1moiegq-StyledTab[aria-selected='true'] {
  color: #390171;
}

.cache-1moiegq-StyledTab[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.5;
}

.cache-1moiegq-StyledTab[aria-disabled='true']:hover,
.cache-1moiegq-StyledTab[aria-disabled='true']:focus {
  color: #b2b6c3;
}

<a
    aria-disabled="false"
    aria-label="test"
    aria-selected="false"
    class="cache-1moiegq-StyledTab e4qdw5v0"
    role="tab"
    tabindex="-1"
  >
    Test tab
  </a>
</DocumentFragment>
`;

exports[`Tab renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-1moiegq-StyledTab {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 12px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  color: #b2b6c3;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
}

.cache-1moiegq-StyledTab:hover,
.cache-1moiegq-StyledTab:active,
.cache-1moiegq-StyledTab:focus {
  color: #390171;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1moiegq-StyledTab:focus-visible {
  outline: auto;
}

.cache-1moiegq-StyledTab[aria-selected='true'] {
  color: #390171;
}

.cache-1moiegq-StyledTab[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.5;
}

.cache-1moiegq-StyledTab[aria-disabled='true']:hover,
.cache-1moiegq-StyledTab[aria-disabled='true']:focus {
  color: #b2b6c3;
}

<span
    aria-disabled="true"
    aria-label="test"
    aria-selected="false"
    class="cache-1moiegq-StyledTab e4qdw5v0"
    role="tab"
    tabindex="-1"
  >
    Test tab
  </span>
</DocumentFragment>
`;

exports[`Tab renders correctly when selected 1`] = `
<DocumentFragment>
  .cache-1moiegq-StyledTab {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 12px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  color: #b2b6c3;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
}

.cache-1moiegq-StyledTab:hover,
.cache-1moiegq-StyledTab:active,
.cache-1moiegq-StyledTab:focus {
  color: #390171;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1moiegq-StyledTab:focus-visible {
  outline: auto;
}

.cache-1moiegq-StyledTab[aria-selected='true'] {
  color: #390171;
}

.cache-1moiegq-StyledTab[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.5;
}

.cache-1moiegq-StyledTab[aria-disabled='true']:hover,
.cache-1moiegq-StyledTab[aria-disabled='true']:focus {
  color: #b2b6c3;
}

<span
    aria-disabled="false"
    aria-label="test"
    aria-selected="true"
    class="cache-1moiegq-StyledTab e4qdw5v0"
    role="tab"
    tabindex="0"
  >
    Test tab
  </span>
</DocumentFragment>
`;

exports[`Tab renders correctly with children 1`] = `
<DocumentFragment>
  .cache-1moiegq-StyledTab {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 12px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  color: #b2b6c3;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
}

.cache-1moiegq-StyledTab:hover,
.cache-1moiegq-StyledTab:active,
.cache-1moiegq-StyledTab:focus {
  color: #390171;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1moiegq-StyledTab:focus-visible {
  outline: auto;
}

.cache-1moiegq-StyledTab[aria-selected='true'] {
  color: #390171;
}

.cache-1moiegq-StyledTab[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.5;
}

.cache-1moiegq-StyledTab[aria-disabled='true']:hover,
.cache-1moiegq-StyledTab[aria-disabled='true']:focus {
  color: #b2b6c3;
}

<span
    aria-disabled="false"
    aria-label="test"
    aria-selected="false"
    class="cache-1moiegq-StyledTab e4qdw5v0"
    role="tab"
    tabindex="-1"
  >
    Test tab
  </span>
</DocumentFragment>
`;
